--- a/app/lp/(3-techincal-docs)/lp-api/subscriptions/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/subscriptions/page.mdx
@@ -70,7 +70,8 @@ Return:
 }
   ```
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id": 1,
@@ -255,3 +256,4 @@ curl -H "Content-Type: application/json" -d '{
     }
 }
 ```
+</details>
