--- a/app/protocol/(3-technical-docs)/cross-chain-messaging/sol-ccm/page.mdx
+++ b/app/protocol/(3-technical-docs)/cross-chain-messaging/sol-ccm/page.mdx
@@ -340,7 +340,8 @@ If you run the test, the encoded data will be printed into the console.
 
 Then the encoded data can be passed as a parameter into the RPC call.
 
-#### Example of creating a Vault swap call with CCM to Solana
+<details>
+<summary>Example of creating a Vault swap call with CCM to Solana</summary>
 
 ```bash copy
 curl -H "Content-Type: application/json" -d '{
@@ -386,3 +387,4 @@ Which will yield the response:
 ```
 
 This Ethereum transaction can then be constructed signed and sent to the Chainflip's Vault smart contract as described in the [EVM Vault Swap docs](/brokers/vault-swaps-api/evm#2-construct-the-transaction).
+</details>
