--- a/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
@@ -37,7 +37,8 @@ Parameters:
 [Response](/lp/lp-api/types#wait-for-result):
 - The encoded deposit [address](/lp/lp-api/types#addresses) that you should send the deposit to.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id":1,
@@ -61,6 +62,7 @@ curl -H "Content-Type: application/json" -d '{
   "id": 1
 }
 ```
+</details>
 
 ### `lp_request_liquidity_deposit_address`
 
@@ -86,7 +88,8 @@ Parameters:
 }
 ```
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id":1,
@@ -113,6 +116,7 @@ curl -H "Content-Type: application/json" -d '{
   "id": 1
 }
 ```
+</details>
 
 ### `lp_register_liquidity_refund_address`
 
@@ -125,7 +129,8 @@ Parameters:
 Return:
 - The transaction hash of the extrinsic that registered the new withdrawal [address](/lp/lp-api/types#foreign-chain-addresses).
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id":1,
@@ -144,6 +149,7 @@ curl -H "Content-Type: application/json" -d '{
   "id": 1
 }
 ```
+</details>
 
 ### `lp_withdraw_asset`
 
@@ -161,7 +167,8 @@ Parameters:
 [<chain>, <unsigned 64 bit integer ID>]
 ```
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id": 1,
@@ -186,6 +193,7 @@ curl -H "Content-Type: application/json" -d '{
   "id": 1
 }
 ```
+</details>
 
 ### `lp_transfer_asset`
 
@@ -200,7 +208,8 @@ Response:
 
 - The transaction hash of the extrinsic that transferred the funds.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
     "id":1,
@@ -220,6 +229,7 @@ curl -H "Content-Type: application/json" -d '{
    "id": 1
 }
 ```
+</details>
 
 ### `lp_update_range_order`
 
@@ -256,7 +266,8 @@ For example if a `lp_update_range_order` request moves an existing range order t
 
 Also this list will begin with updates to range orders, that do nothing to those range orders, and are just reporting the `collected_fees`, from any range orders that have collected fees since the last successful order update/asset withdrawal. So you will likely want to filter these out.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
     "id": 1,
@@ -323,6 +334,7 @@ curl -H "Content-Type: application/json" -d '{
     "id": 1
 }
 ```
+</details>
 
 ### `lp_set_range_order`
 
@@ -359,7 +371,8 @@ For example if a `lp_set_range_order` request changes the total size of an exist
 
 Also this list will begin with updates to range orders, that do nothing to those range orders, and are just reporting the `collected_fees`, from any range orders that have collected fees since the last successful order update/asset withdrawal. So you will likely want to filter these out.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
     "id": 1,
@@ -424,6 +437,7 @@ curl -H "Content-Type: application/json" -d '{
     "id": 1
 }
 ```
+</details>
 
 ### `lp_update_limit_order`
 
@@ -464,7 +478,8 @@ For example if a `lp_update_limit_order` request changes the total size of an ex
 
 Also this list will begin with updates to limit orders, that do nothing to those limit orders, and are just reporting the `collected_fees`, from any limit orders that have collected fees since the last successful order update/asset withdrawal. So you will likely want to filter these out.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
     "id": 1,
@@ -508,6 +523,7 @@ curl -H "Content-Type: application/json" -d '{
     "id": 1
 }
 ```
+</details>
 
 **_NOTE:_** If you pass the `dispatch_at` parameter the response may not return any results due to the fact that order is not created/updated yet. Instead the `response` array will be empty. The exception to this would be if the transaction is included in the `dispatch_at` block, in which case the operation is executed immediately.
 
@@ -561,7 +577,8 @@ Also this list will begin with updates to limit orders, that do nothing to those
 
 **_NOTE:_** If you pass the `dispatch_at` parameter the response may not return any results due to the fact that order is not created/updated yet. The exception to this would be if the submitted extrinsic is included in the `dispatch_at` block, in which case the operation is executed immediately.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
     "id": 1,
@@ -603,6 +620,7 @@ curl -H "Content-Type: application/json" -d '{
     "id": 1
 }
 ```
+</details>
 
 ### `lp_free_balances`
 
@@ -618,7 +636,8 @@ Parameters: None
 Return:
 - An JSON object where each key is a Chain, and the values are arrays of `{ <asset>, <amount> }` pairs.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id":1,
@@ -651,6 +670,7 @@ curl -H "Content-Type: application/json" -d '{
     "id": 1
 }
 ```
+</details>
 
 ### `lp_get_open_swap_channels`
 
@@ -661,7 +681,8 @@ Parameters: None
 Return:
 - All the open swap channels and their associated details in JSON format.
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id":1,
@@ -764,6 +785,7 @@ curl -H "Content-Type: application/json" -d '{
     "id": 1
 }
 ```
+</details>
 
 ### `lp_request_redemption`
 
@@ -776,7 +798,8 @@ Parameters:
 - [`exact_amount`](/lp/lp-api/types#asset) (Optional): The amount of flip to redeem. If not specified, all $FLIP will be redeemed.
 - [`executor_address`](/lp/lp-api/types#addresses) (Optional): Restricts the `executeRedemption` function call in the [Gateway contract](/protocol/funding-state-chain-account#state-chain-flip-gateway) to only be callable by the specified address for this redemption. If not specified, anyone can execute the redemption.
 
-#### Example
+<details>
+<summary>Example</summary>
 
 Redeem all $FLIP:
 
@@ -807,7 +830,7 @@ curl -H "Content-Type: application/json" \
          }' \
      http://localhost:10589
 ```
-
+</details>
 
 ### `lp_order_fills`
 
@@ -821,7 +844,8 @@ Return:
 - Block number
 - JSON array of all the fills in this finalized block. Exactly matching the structures returned by [`lp_subscribe_order_fills`](#lp_subscribe_order_fills)
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id": 1,
@@ -912,6 +936,7 @@ curl -H "Content-Type: application/json" -d '{
     "id": 1,
 }
 ```
+</details>
 
 ### `lp_cancel_all_orders`
 
@@ -946,7 +971,8 @@ A chronological list of all the updates that were done as part of the operation.
 
 Where the content of RangeOrder or LimitOrder is the same as the response of the above functions [`lp_set_limit_order`](#lp_set_limit_order) and [`lp_set_range_order`](#lp_set_range_order).
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '{
   "id":1,
@@ -1249,6 +1275,7 @@ curl -H "Content-Type: application/json" -d '{
    "id":1
 }
 ```
+</details>
 
 ### `lp_cancel_orders_batch`
 
@@ -1289,7 +1316,8 @@ A chronological list of all the updates that were done as part of the operation.
 Where the content of RangeOrder or LimitOrder is the same as the response of the above functions [`lp_set_limit_order`](#lp_set_limit_order) and [`lp_set_range_order`](#lp_set_range_order).
 
 
-#### Example
+<details>
+<summary>Example</summary>
 ```sh
 curl -H "Content-Type: application/json" -d '
 {
@@ -1395,7 +1423,7 @@ curl -H "Content-Type: application/json" -d '
    "id":1
 }
 ```
-
+</details>
 
 ### `lp_schedule_swap`<span className="badge-success after:content-['New']"/>
 
@@ -1419,7 +1447,6 @@ where `DcaParameters` is an object containing the following fields:
 - `swap_request_id`: The id of the initiated swap request.
 
 <details>
-
 <summary>Example</summary>
 
 Request to initiate a swap from USDC to USDT on Ethereum:
@@ -1461,5 +1488,4 @@ A possible response:
 }
 
 ```
-
 </details>
