--- a/app/protocol/(3-technical-docs)/node-rpcs/requests/page.mdx
+++ b/app/protocol/(3-technical-docs)/node-rpcs/requests/page.mdx
@@ -29,7 +29,8 @@ Return:
 }
 ``` 
 
-#### Example
+<details>
+<summary>Example</summary>
 
 Request:
 
@@ -65,6 +66,7 @@ Response:
   "id": "1"
 }
 ```
+</details>
 
 ### `cf_controlled_vault_addresses`
 
@@ -101,7 +103,8 @@ A single entry looks like follows:
 ```
 
 
-#### Example
+<details>
+<summary>Example</summary>
 
 Request:
 
@@ -188,3 +191,4 @@ Response:
   "id": "1"
 }
 ```
+</details>
