docs: lending fees graphs and cleanup

--- a/app/lending/(2-guides)/understanding_liquidations/page.mdx
+++ b/app/lending/(2-guides)/understanding_liquidations/page.mdx
@@ -77,9 +77,9 @@ The protocol submits small DCA-style liquidation orders with a minimum price sli
 
 Liquidation continues until:
 
-- the loan becomes healthy
-- the loan is fully repaid
-- collateral is exhausted
+- The loan becomes healthy
+- The loan is fully repaid
+- Collateral is exhausted
 
 Borrowers may also manually trigger soft liquidation to unwind a position and reclaim remaining collateral.
 
