--- a/app/lending/(3-techincal-docs)/markets/page.mdx
+++ b/app/lending/(3-techincal-docs)/markets/page.mdx
@@ -111,8 +111,8 @@ Chainflip Lending is designed to minimise systemic risk through:
 
 However, lenders may be exposed to:
 
-- socialised losses in rare scenarios where collateral is insufficient in an attempt to fully liquidate a loan
-- periods of high utilisation, causing higher borrow rates
-- oracle outages, temporarily pausing liquidations and new loan creation
+- Socialised losses in rare scenarios where collateral is insufficient in an attempt to fully liquidate a loan
+- Periods of high utilisation, causing higher borrow rates
+- Oracle outages, temporarily pausing liquidations and new loan creation
 
 Overall, risk is tightly scoped to each asset pool and side, making the system predictable and transparent.
