--- a/app/lending/(3-techincal-docs)/pricing/page.mdx
+++ b/app/lending/(3-techincal-docs)/pricing/page.mdx
@@ -92,9 +92,9 @@ LPs may adjust spreads or participation during heavy liquidation flow. Important
 
 Pricing remains competitive because:
 
-- many LPs operate concurrently
-- liquidation orders update every block
-- oracle pricing stabilises minimum bounds
+- Many LPs operate concurrently
+- Liquidation orders update every block
+- Oracle pricing stabilises minimum bounds
 
 Chainflip’s DEX has proven the ability to rebalance across severe global volatility.
 
