--- a/app/lending/(1-concepts)/utilisation/page.mdx
+++ b/app/lending/(1-concepts)/utilisation/page.mdx
@@ -44,13 +44,18 @@ Higher yields naturally attract additional liquidity into the pool, increasing t
 This behaviour gives borrowers confidence that rates can normalise through increased supply, not solely through their own repayments.
 
 ```mermaid
-
 xychart-beta
     title "Utilisation Curve - Interest Rates"
     x-axis "Utilisation %" 0 --> 100
     y-axis "Interest Rate (APR %)" 0 --> 55
     line "Interest Rate" [2, 2.67, 3.33, 4, 4.67, 5.33, 6, 6.67, 7.33, 8, 50]
 ```
+|Utilisation|Interest Rate|
+|-----------|-------------|
+|0%         |2%           |
+|90%        |8%           |
+|100%       |50%          |
+
 <Callout type="info">
 Actual rates may be different to those shown above.
 </Callout>
