--- a/app/lending/(1-concepts)/fees/page.mdx
+++ b/app/lending/(1-concepts)/fees/page.mdx
@@ -21,7 +21,7 @@ This fee is applied once per loan creation, and also when a loan is updated (tha
 
 ## Liquidation Fee
 
-If a loan enters soft or hard liquidation (non-voluntary), a fee is applied to the portion of collateral that is liquidated.
+If a loan enters soft (non-voluntary) or hard liquidation, a fee is applied to the portion of collateral that is liquidated.
 
 **Liquidation Fee:** 5 bps (0.05%) of the liquidated collateral
 
