--- a/app/brokers/(3-techincal-docs)/broker-api/requests/page.mdx
+++ b/app/brokers/(3-techincal-docs)/broker-api/requests/page.mdx
@@ -26,7 +26,7 @@ Parameters:
 - `refund_parameters`: (Optional) [Slippage protection](/protocol/swapping-basics#slippage-protection) for swaps through the channel as JSON object: `{"retry_duration": <number>, "refund_address": <address>, "min_price": <hex_string>, "max_oracle_price_slippage": <number | undefined>}`. Where `retry_duration` is a number of blocks, `refund_address` is an [address](#addresses), and `min_price` is a [price](#price), and `max_oracle_price_slippage` is basis points.
 - `dca_parameters`: (Optional) DCA parameters for swaps through the channel as JSON object: `{"number_of_chunks": <number>, "chunk_interval": <number>}`. Where `number_of_chunks` is the number of "sub-swaps" to perform, and `chunk_interval` is the delay between them in number of blocks.
 
-Where every affiliate broker is defined as follow:
+Where every affiliate broker is defined as follows:
 ```json
 {
 	"account": <AccountId>,
@@ -525,6 +525,34 @@ Example output:
       }
     ]
   ],
+  "id": 1
+}
+```
+
+### `broker_bind_fee_withdrawal_address`
+
+Bind the broker account to a given withdrawal address. The broker can only withdraw the fees to this address from this point on. This bound address cannot be changed once set.
+
+Parameters:
+- `address`: The ethereum address which the broker account wants to bind to as fee withdrawal address.
+
+Return: The transaction hash of state chain extrinsic.
+
+Example input:
+
+```bash copy
+curl 'http://localhost/' \
+  -H 'accept: application/json' \
+  -H 'content-type: application/json' \
+  --data-raw '{"id": 1, "jsonrpc": "2.0", "method": "broker_bind_fee_withdrawal_address", "params": {"address": "0x3499b9b27ec38fe019299498958c451d294f6b5e"}}' | jq
+```
+
+Example output:
+
+```json
+{
+  "jsonrpc": "2.0",
+  "result": "0x2b130acc1b3d56f8caff1e1adc32b8fbcc25c5ce0d9daa559d073e438c136ce1",
   "id": 1
 }
 ```
