--- a/app/brokers/(3-techincal-docs)/broker-api/page.mdx
+++ b/app/brokers/(3-techincal-docs)/broker-api/page.mdx
@@ -35,6 +35,7 @@ Here are the RPCs useful for liquidity providers that are available on the Broke
     <Cards.Card title="broker_register_affiliate" href="/brokers/broker-api/requests#broker_register_affiliate" />
     <Cards.Card title="broker_get_affiliates" href="/brokers/broker-api/requests#broker_get_affiliates" />
     <Cards.Card title="broker_affiliate_withdrawal_request" href="/brokers/broker-api/requests#broker_affiliate_withdrawal_request" />
+    <Cards.Card title="broker_bind_fee_withdrawal_address" href="/brokers/broker-api/requests#broker_bind_fee_withdrawal_address" />
 
 </Cards>
 
