feat: add Wbtc, ArbUsdt and SolUsdt token addresses

--- a/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
+++ b/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
@@ -32,10 +32,13 @@ Our SDK/API uses human-readable strings to identify assets. For more information
   | **[USDC (ERC-20)](https://etherscan.io/address/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48)** | Ethereum | `perseverance` `sisyphos` `mainnet` |
   | **[USDC (ERC-20)](https://arbiscan.io/address/0xaf88d065e77c8cC2239327C5EDb3A432268e5831)** | Arbitrum | `perseverance` `sisyphos` `mainnet` |
   | **[USDT (ERC-20)](https://etherscan.io/address/0xdAC17F958D2ee523a2206206994597C13D831ec7)** | Ethereum | `perseverance` `sisyphos` `mainnet` |
+  | **[USDT (ERC-20)](https://arbiscan.io/address/0xFd086bC7CD5C481DCC9C85ebE478A1C0b69FCbb9)** | Arbitrum | `perseverance` `sisyphos` `mainnet` |
+  | **[WBTC (ERC-20)](https://etherscan.io/address/0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599)** | Ethereum | `perseverance` `sisyphos` `mainnet` |
   | **[FLIP (ERC-20)](https://etherscan.io/address/0x826180541412D574cf1336d22c0C0a287822678A)** | Ethereum | `perseverance` `sisyphos` `mainnet` |
   | **DOT** | Polkadot | `perseverance` `sisyphos` `mainnet` |
   | **SOL** | Solana | `perseverance` `sisyphos` `mainnet` |
   | **[USDC (SPL-Token)](https://explorer.solana.com/address/EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v)** | Solana | `perseverance` `sisyphos` `mainnet` |
+  | **[USDT (SPL-Token)](https://explorer.solana.com/address/Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB)** | Solana | `perseverance` `sisyphos` `mainnet` |
   | **SOL** | Assethub | `perseverance` `sisyphos` `mainnet` |
   | **[USDC](https://assethub-polkadot.subscan.io/assets/1337)** | Assethub | `perseverance` `sisyphos` `mainnet` |
   | **[USDT](https://assethub-polkadot.subscan.io/assets/1984)** | Assethub | `perseverance` `sisyphos` `mainnet` |
