--- a/app/protocol/(3-technical-docs)/supported-chains-assets/mainnet-addresses/page.mdx
+++ b/app/protocol/(3-technical-docs)/supported-chains-assets/mainnet-addresses/page.mdx
@@ -16,17 +16,20 @@ description: Official Mainnet Chainflip Contract Addresses
   - AddressChecker: [`0x79001a5e762f3bEFC8e5871b42F6734e00498920`](https://etherscan.io/address/0x79001a5e762f3bEFC8e5871b42F6734e00498920)
   - USDC: [`0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48`](https://etherscan.io/address/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48)
   - USDT: [`0xdAC17F958D2ee523a2206206994597C13D831ec7`](https://etherscan.io/address/0xdAC17F958D2ee523a2206206994597C13D831ec7)
+  - WBTC: [`0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599`](https://etherscan.io/address/0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599)
 
 ### Arbitrum
   - KeyManager: [`0xBFe612c77C2807Ac5a6A41F84436287578000275`](https://arbiscan.io/address/0xBFe612c77C2807Ac5a6A41F84436287578000275)
   - Vault: [`0x79001a5e762f3bEFC8e5871b42F6734e00498920`](https://arbiscan.io/address/0x79001a5e762f3bEFC8e5871b42F6734e00498920)
   - AddressChecker: [`0xc1B12993f760B654897F0257573202fba13D5481`](https://arbiscan.io/address/0xc1B12993f760B654897F0257573202fba13D5481)
   - USDC: [`0xaf88d065e77c8cC2239327C5EDb3A432268e5831`](https://arbiscan.io/address/0xaf88d065e77c8cC2239327C5EDb3A432268e5831)
+  - USDT: [`0xFd086bC7CD5C481DCC9C85ebE478A1C0b69FCbb9`](https://arbiscan.io/address/0xFd086bC7CD5C481DCC9C85ebE478A1C0b69FCbb9)
 
 ## Solana Mainnet-Beta
 - Vault: [`AusZPVXPoUM8QJJ2SL4KwvRGCQ22cDg6Y4rg7EvFrxi7`](https://solscan.io/account/AusZPVXPoUM8QJJ2SL4KwvRGCQ22cDg6Y4rg7EvFrxi7)
 - Vault Data Account: [`ACLMuTFvDAb3oecQQGkTVqpUbhCKHG3EZ9uNXHK1W9ka`](https://solscan.io/account/ACLMuTFvDAb3oecQQGkTVqpUbhCKHG3EZ9uNXHK1W9ka)
 - USDC Token Vault ATA: [`8KNqCBB1LKWbtjNxY9v2g1fSBKm2ZRgNNv7rmx2bE6Ce`](https://solscan.io/account/8KNqCBB1LKWbtjNxY9v2g1fSBKm2ZRgNNv7rmx2bE6Ce)
+- USDT Token Vault ATA: [`R4Z9JGY8iMmG4UJf6aBtzobAo4rmGMdfLgXrbXSWc4y`](https://solscan.io/account/R4Z9JGY8iMmG4UJf6aBtzobAo4rmGMdfLgXrbXSWc4y)
 - Swap Endpoint: [`J88B7gmadHzTNGiy54c9Ms8BsEXNdB2fntFyhKpk3qoT`](https://solscan.io/account/J88B7gmadHzTNGiy54c9Ms8BsEXNdB2fntFyhKpk3qoT)
 - Swap Endpoint Data Account: [`FmAcjWaRFUxGWBfGT7G3CzcFeJFsewQ4KPJVG4f6fcob`](https://solscan.io/account/FmAcjWaRFUxGWBfGT7G3CzcFeJFsewQ4KPJVG4f6fcob)
 - Swap Endpoint Native Vault: [`3tJ67qa2GDfvv2wcMYNUfN5QBZrFpTwcU8ASZKMvCTVU`](https://solscan.io/account/3tJ67qa2GDfvv2wcMYNUfN5QBZrFpTwcU8ASZKMvCTVU)
